Fix bullet alignment on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -110,7 +110,7 @@ ul.links li:last-child:after {
   }
 
   ul {
-    padding-left: 1.75em;
+    padding-left: 2em;
   }
 
   ul.links li {
